--- a/style.css
+++ b/style.css
@@ -1,53 +1,55 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{
-    
-        font-family: "Gravitas One", serif;
-        font-size: medium;
+.navbar {
+
+    font-family: "Winky Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
-.navbar{
+.navbar {
     padding: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     border-bottom: solid black 1px;
     align-items: center;
 }
 
-.navbar-p1__name{
+.navbar-p1__name {
     color: #A435F0;
 }
 
-.navbar-p2{
-    padding: 20px;
+.navbar-p2 {
+    padding: 10px;
     border: solid black 1px;
-    width:60%;
-     border-radius: 30px;
-     display: flex;
-     gap: 10px;
-     align-items: center;
+    width: 60%;
+    border-radius: 30px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
 
-.navbar-p2 input{
+.navbar-p2 input {
     width: 100%;
     border: none;
     font-size: 20px;
 }
 
-.navbar-p2 input:focus{
+.navbar-p2 input:focus {
     outline: none;
 }
 
-.navbar-p3{
+.navbar-p3 {
     display: flex;
     gap: 10px;
 }
 
-.categories{
+.categories {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -55,54 +57,120 @@ body{
     border-bottom: solid black 1px;
 }
 
-.categories p{
+.categories p {
     background-color: #A435F0;
     padding: 10px;
     border-radius: 30px;
     color: white;
 }
 
-.sale-image img{
+.sale-image img {
     width: 100%;
 }
 
-.recommended{
+.recommended {
     padding: 10px;
+
 }
 
-.course-card{
+.course-card {
     width: 200px;
+    flex-grow: 1;
+    flex-basis: 25%;
+    flex-wrap: wrap;
+    margin: 2px;
 }
 
-.course-card img{
-    width: 100%;
+.course-card img {
+    width: 200px;
     height: 50%;
+    
 }
 
-.recommended__container{
+
+.course-card p{
+    padding-bottom: 3px;
+    padding-top: 5px;
+}
+
+.recommended__container {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 10px;
+    
 }
 
-.topics{
+.topics {
     padding: 10px;
 }
 
-.topics__container{
+.topics__container {
     display: flex;
     flex-direction: row;
     gap: 10px;
     margin-top: 10px;
     flex-wrap: wrap;
-    
+    border: solid black 10px;
+  
+
 
 }
 
-.topics__container p{
+.topics__container p {
     padding: 10px;
     border: solid yellowgreen 3px;
     flex-grow: 1;
     flex-basis: 25%;
+    border-radius: 30px;
+    text-align: center;
+    background-color: black;
+    color: bisque;
+    margin: 10px;
 }
+
+.popular {
+    padding: 10px;
+
+}
+
+.popular__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    padding: 30px;
+}
+
+.footer__s1{
+    display: flex;
+    gap: 20px;
+
+}
+
+.footer__s2{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.footer__s1 p, .footer__s1 h3{
+    margin: 20px;
+
+}
+
+.footer__s1 h3{
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    padding: 10px;
+}
+
